# still-here

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: config.rs  dictionary.rs  gui.rs  input.rs  main.rs  scheduler.rs  stealth.rs
