[package]
name = "still-here"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "WinServiceHost"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.8"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
]

[profile.release]
opt-level = "s"
lto = true
strip = true
